banne section added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/353ec34ec9.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <!-- navbar section  -->
+        <nav>
+            <div class="nav">
+                <div class="navbar-title">
+                    <h3>Influencer products</h3>
+                </div>
+                <div class="list">
+                        <a href="">Home</a>
+                        <a href="">Products</a>
+                        <a href="">Sign Up</a>
+                        <a href="">Log In</a>
+                        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+                        <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+            </div>
+        </nav>
+        <!-- banner section -->
+        <section>
+            <div class="banner-container">
+                <div class="banner-section">
+                    <h1 class="banner-section-title">Start your Journey as 
+                        Influencer</h1>
+                    <p class="banner-section-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="btn-primary"><span>Preebook now</span><i class="fa-solid fa-arrow-right-long" style="color: #f9fafb;"></i></button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/main-camera.png" alt="">
+                </div>
+            </div>
+            </div>
+        </section>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
